# apps/doc-engine/docs/swagger.json
@@ -3985,7 +3985,7 @@
                 "name": {
                     "type": "string",
                     "maxLength": 50,
-                    "minLength": 1
+                    "minLength": 3
                 }
             }
         },
@@ -4620,6 +4620,20 @@
                 }
             }
         },
+        "github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.TagSimpleResponse": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.TagWithCountResponse": {
             "type": "object",
             "properties": {
@@ -4675,8 +4689,11 @@
                 "isPublicLibrary": {
                     "type": "boolean"
                 },
-                "tagCount": {
-                    "type": "integer"
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.TagSimpleResponse"
+                    }
                 },
                 "title": {
                     "type": "string"
@@ -5111,7 +5128,7 @@
                 "name": {
                     "type": "string",
                     "maxLength": 50,
-                    "minLength": 1
+                    "minLength": 3
                 }
             }
         },
